Layout fix, overflow grid fix

--- a/core/FCom/AdminSPA/AdminSPA/scss/layout/_elements.scss
+++ b/core/FCom/AdminSPA/AdminSPA/scss/layout/_elements.scss
@@ -122,6 +122,15 @@ a:focus {
 }
 .f-tag-container {
 	margin: 10px 0;
+	white-space: nowrap;
+}
+.f-tag-container__elem {
+	display: inline-block;
+	vertical-align: middle;
+	.select2-container {
+		min-width: 160px;
+		width: 80%;
+	}
 }
 .no-padding {
 	padding: 0;
