--- a/core/FCom/AdminSPA/AdminSPA/scss/layout/_filter-panel.scss
+++ b/core/FCom/AdminSPA/AdminSPA/scss/layout/_filter-panel.scss
@@ -8,7 +8,6 @@
 
 .filter-options-block {
       background: #fff;
-      padding: 20px;
 }
 .option-box {
       padding: 20px;
@@ -48,15 +47,15 @@
 }
 .params-left {
       position: absolute;
-      left: -420px;
+      left: 0px;
       top: 10px;
-      transition: 0.3s left ease-in;
-      width: 420px;
       z-index: 8;
+
       .filter-options-block {
-            border: 1px solid #d0dae3;
             border-left: 0;
             border-radius: 0 0 5px 0;
+            width: 0;
+            overflow: hidden;
       }
       .filter-open-button {
             right: -40px;
@@ -64,7 +63,7 @@
             padding: 6px 10px;
       }
       &.open {
-            left: 0px;
+            left: 0;
             z-index: 8;
             .filter-open-button {
                   background: #d0dae3;
@@ -80,25 +79,30 @@
                         }
                   }
             }
+            .filter-options-block {
+                  width: 420px;
+                  overflow: visible;
+                  padding: 20px;
+                  border: 1px solid #d0dae3;
+            }
       }
 }
 
 .params-right {
       position: absolute;
-      right: -380px;
+      right: 0;
       top: 10px;
-      width: 380px;
-      transition: 0.3s right ease-in;
+
       z-index: 8;
       label {
             cursor: pointer;
       }
       .filter-options-block {
-            border: 1px solid #d0dae3;
             border-right: 0;
             border-radius: 0 0 0 5px;
-            padding: 0;
             font-size: 0;
+            width: 0;
+            overflow: hidden;
       }
       .filter-open-button {
             left: -40px;
@@ -121,6 +125,11 @@
                               fill: #d0dae3;
                         }
                   }
+            }
+            .filter-options-block {
+                  width: 380px;
+                  overflow: visible;
+                  border: 1px solid #d0dae3;
             }
       }
       .filter-toggle {
