--- a/core/FCom/AdminSPA/AdminSPA/scss/layout/_table.scss
+++ b/core/FCom/AdminSPA/AdminSPA/scss/layout/_table.scss
@@ -8,7 +8,7 @@ table {
 .f-grid-wrapper {
 	/*overflow: hidden;
 	overflow-y: visible;*/
-	min-height: 50vh;
+	min-height: 70vh;
 	padding: 0;
 	margin-bottom: 46px;
 }
